# rust-aio

./: Cargo.toml  README.md
examples/: fs.rs  tcp.rs
src/: constants.rs  error.rs  eventstream.rs  future.rs  impls.rs  lib.rs  pipe.rs  reactor.rs  register.rs  util.rs
src/iostream/: mod.rs
src/net/: mod.rs
src/net/tcp/: mod.rs
src/stream/: mod.rs
src/sys/: mod.rs  pipe.rs  rcmut.rs  register.rs  socket.rs
tests/: pipe.rs
