[package]

name = "aio"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-aio.git"
description = "Blazingly fast non-blocking IO."
readme = "README.md"
license = "MIT"

[dependencies]
log = "*"
emitter = "*"

[dependencies.event]
version = "*"
git = "https://github.com/reem/rust-event"

[dependencies.mio]
version = "*"
git = "https://github.com/carllerche/mio"

