[package]

name = "aio"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-aio.git"
description = "Blazingly fast non-blocking IO."
readme = "README.md"
license = "MIT"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.event]
path = "../rust-event"

[dependencies.syncbox]
git = "https://github.com/carllerche/syncbox"

[dependencies]
log = "*"

[dev-dependencies]
env_logger = "*"

