[package]

name = "aio"
version = "0.0.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-aio.git"
description = "Lightweight nonblocking io and eventing framework."
readme = "README.md"
license = "MIT"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies]
log = "*"

